--- a/style.css
+++ b/style.css
@@ -1,29 +1,160 @@
-body {
+:root{
+    --main-font: 'Roboto Mono', monospace;
+    --header-font: 'Domine', serif;
+}
+
+body{
+    margin: 0;
+    padding: 0;
     display: flex;
+    flex: 1;
+}
+
+h3{
+    font-family: var(--header-font);
+}
+
+h5, p {
+    font-family: var(--main-font);
+}
+
+.hero-image{
+    display: flex;
+    align-items: center ;
+    justify-content: center;
+    background-image: url('image2.jpg');
+    background-size:cover;
+    height: 100vh;
+    width: 45vw;
+}
+
+.logo-banner{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    /* background: rgba(0, 0, 0, 0.5); */
+}
+
+.form{
+    background-color:rgb(245, 245, 245);
+    height: 100vh;
+    width: 50vw;
+    padding: 0 5vw;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
-.container{
-    background-color: red;
+.input-container{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.fr{
     display: flex;
-    flex-wrap: wrap;
-    height: 60vh;
-    width: 80vh;
+    flex-direction: column;
 }
 
-.form-container{
-    background-color: blue;
-    width: 50%;
-    display: flex;
-    justify-content: center;
+.fr > label{
+    font-family: var(--main-font);
+    position: relative;
 }
 
-.image-side{
-    background-color: green;
-    width: 50%;
+.fr > input{
+    border: 1px solid darkgray;
+    border-radius: 5px;
+    height: 25px;
+    margin-top: 6px;
+    padding-left: 1rem;
 }
 
-.sign-up{
-    width: 80%;
-    background-color: beige;
+.fr > input:focus{
+    border: none;
+    border: 2px solid #31c68f;
+    outline: none;
 }
+
+.fr > input:not(:placeholder-shown):invalid{
+    border: 2px solid red;
+}
+
+.submit-btn{
+    background-color: #31c68f;
+    font-family: var(--main-font);
+    font-size: .8rem;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 30px 2px 10px 2px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px -1px rgba(0,0,0,0.1);
+    transition: all .3s;
+}
+
+.submit-btn:hover{
+    transform: translate(1px, -1px);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.12), 0 4px 4px rgba(0,0,0,0.16), 0 8px 8px rgba(0,0,0,0.20);
+}
+
+.logo{
+    width: 100px;
+}
+
+.logo:hover {
+    scale: 1.1;
+    transition: .2s ease-in-out;
+}
+
+.logo-text > h2 {
+    color: white;
+}
+
+.login > p{
+    font-size: 0.8rem;
+}
+
+a{
+    color: #31c68f;
+}
+
+@media screen and (max-width: 900px){
+    body{
+        flex-direction: column;
+    }
+
+    .hero-image{
+        width: 100vw;
+        height: 200px
+    }
+
+    .form{
+        width: 90vw;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    .input-container{
+        grid-template-columns: 1fr;
+    }
+
+    .form{
+        padding: 100px 15vw;
+        width: 70vw;
+    }
+  }
+
+  @media screen and (max-width: 350px) {
+    .form{
+        padding: 200px 15vw;
+        width: 70vw;
+    }
+    .logo-banner{
+        flex-direction: column;
+    }
+     .hero-image{
+        height: auto;
+     }
+  }
